<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@drawable/background">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/back_btn"
                android:layout_width="45dp"
                android:layout_height="match_parent"
                android:background="@drawable/bg_rounded"
                android:src="@drawable/ic_baseline_arrow_back_24" />

            <TextView
                android:id="@+id/category_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/back_btn"
                android:background="@drawable/bg_start_rounded"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/checkout_page"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:elevation="3dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/text_shop_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/restaurant_name"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_shop_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="start|top"
                        android:text="@string/open_timing"
                        android:textColor="@android:color/tab_indicator_text"
                        android:textSize="12sp"
                        android:visibility="visible" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/cart_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:lines="1"
                    android:text="@string/doted_line"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:gravity="center"
                        android:text="@string/detail" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:gravity="center"
                        android:text="@string/quantity" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:gravity="center"
                        android:text="@string/subtotal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:gravity="center"
                        android:text="@string/gst_2_5" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/cart_items"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:padding="16dp">


                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:gravity="center|start"
                        android:text="@string/total"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/subtotal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:gravity="end"
                        android:text="₹500"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/Gst"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_weight="0.1"
                        android:gravity="end"
                        android:text="₹50"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/text_food_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:gravity="center|start"
                        android:text="@string/to_pay"
                        android:textColor="@color/colorAccent"
                        android:textSize="20sp"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/grandTotal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center|end"
                        android:minWidth="60dp"
                        android:text="₹50"
                        android:textColor="@color/colorAccent"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:lines="1"
                    android:text="@string/doted_line"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/radio_pickup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:checked="true"
                        android:text="@string/pickup" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/radio_delivery"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/delivery" />
                </RadioGroup>

                <TextView
                    android:id="@+id/text_dish_rating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:drawablePadding="4dp"
                    android:gravity="center_vertical"
                    android:padding="8dp"
                    android:text="@string/cash_on_delivery"
                    android:textColor="@android:color/holo_green_dark"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/ic_baseline_money_24" />

                <Button
                    android:id="@+id/Place_order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/bg_all_rounded"
                    android:enabled="false"
                    android:padding="5dp"
                    android:text="@string/place_order"
                    app:cornerRadius="10dp" />


            </LinearLayout>


            <LinearLayout
                android:id="@+id/empty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp"
                android:visibility="gone">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:src="@drawable/empty" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/your_cart_is_empty"
                    android:textColor="@android:color/holo_red_dark" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</LinearLayout>