<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Splashscreen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/splashData"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="6dp"
        android:orientation="vertical"
        android:visibility="visible">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toTopOf="@+id/appname"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/appname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:src="@drawable/appname"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/splashData2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="6dp"
        android:visibility="gone">

        <RelativeLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageview"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/appname" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_start_rounded"
                android:gravity="end">

                <Spinner
                    android:id="@+id/lang_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints="English"
                    android:padding="6dp"
                    android:popupBackground="@color/skyBlue"

                    />
            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:id="@+id/text_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/bg_rounded"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/category"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/ic_star"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/category_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:clipToPadding="false"
            android:foregroundGravity="center"
            android:overScrollMode="never"
            app:layout_constraintTop_toBottomOf="@id/text_category">

        </androidx.recyclerview.widget.RecyclerView>

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:layout_constraintTop_toBottomOf="@id/category_recycler">

            <TextView
                android:id="@+id/text_top_dish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_rounded"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/top_dishes"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:drawableStartCompat="@drawable/ic_star" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/topDishes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_top_dish"
                android:layout_margin="5dp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/bg_rounded"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="15dp"
            android:paddingTop="8dp"
            android:paddingEnd="15dp"
            android:paddingBottom="8dp"
            android:id="@+id/lin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/relativeLayout">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:onClick="openLinkedin"
                android:src="@drawable/linkedin" />


            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="25dp"
                android:onClick="openGithub"
                android:src="@drawable/github" />
        </LinearLayout>
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/lin"
            android:text="@string/creator"
            android:textColor="@color/black"
            android:textStyle="bold" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/toCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:src="@drawable/ic_baseline_shopping_cart_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="-50dp"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        android:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>